--- a/output/archives.html
+++ b/output/archives.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="wwww.getready1.com" />
+    <meta property="og:url" content="https://www.getready1.com" />
 
     <!-- default FB app id: 966242223397117 -->
     <meta property="fb:app_id" content="" />
@@ -104,7 +104,7 @@
 
     <dl>
             <dt>Thu 24 October 2024</dt>
-            <dd><a href="wwww.getready1.com/the-history-and-science-of-color-temperature.html">The History and Science of Color Temperature</a></dd>
+            <dd><a href="https://www.getready1.com/the-history-and-science-of-color-temperature.html">The History and Science of Color Temperature</a></dd>
     </dl>
 </div>
 
