--- a/output/categories.html
+++ b/output/categories.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="wwww.getready1.com" />
+    <meta property="og:url" content="https://www.getready1.com" />
 
     <!-- default FB app id: 966242223397117 -->
     <meta property="fb:app_id" content="" />
@@ -102,7 +102,7 @@
     <!-- Content -->
     <div class="container">    <h2>Categories on Ready-1</h2>
     <ul>
-            <li><a href="wwww.getready1.com/category/concepts.html">Concepts</a> (1)</li>
+            <li><a href="https://www.getready1.com/category/concepts.html">Concepts</a> (1)</li>
     </ul>
 </div>
 
