--- a/the-history-and-science-of-color-temperature.html
+++ b/the-history-and-science-of-color-temperature.html
@@ -204,7 +204,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="text-center text-muted mt-3 mb-0">Website and original content Copyright &copy; {{ now | strftime("%Y") }} Ready-1 LLC. All rights reserved.</p>
+          <p class="text-center text-muted mt-3 mb-0">Website and original content Copyright &copy; 2024 Ready-1 LLC. All rights reserved.</p>
         </div>
       </div>
     </div>
